# CUDA_C_FEM1D

./: .gitignore  CMakeLists.txt
src/: convecKernels.cu  convecKernels.cuh  defConstants.cuh  genData.cu  genData.cuh  meshGen.cu  meshGen.cuh  test.cu
